--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,6 +8,7 @@
 @import "header/header";
 @import "header/header-overlay";
 @import "header/header-menu";
+@import "header/header-burger";
 @import "header/header-content";
 @import "header/header-info";
 @import "sections/section-common";
