--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -17,6 +17,7 @@ body {
 a {
     max-width: max-content;
     text-decoration: none;
+    color: inherit;
 }
 
 .wrapper {
@@ -40,4 +41,8 @@ h1 {
     margin-top: 0;
     padding: 0;
     margin-bottom: $gap*1.7;
+    @include md {
+        text-align: center;
+        font-size: 42px
+    }
 }
