--- a/assets/scss/_common.scss
+++ b/assets/scss/_common.scss
@@ -42,6 +42,7 @@ h1 {
     padding: 0;
     margin-bottom: $gap*1.7;
     @include md {
+        width: 100%;
         text-align: center;
         font-size: 42px
     }
