--- a/assets/scss/header/_header-content.scss
+++ b/assets/scss/header/_header-content.scss
@@ -21,6 +21,7 @@
         flex-wrap: wrap;
         gap: $gap*2;
         justify-content: center;
+        padding: 0;
     }
     &__main {
         width: 50%;
@@ -70,6 +71,7 @@
         }
         @include md {
             font-size: 20px;
+            text-align: center;
         }
     }
     &__text p {
@@ -83,6 +85,9 @@
         max-width: $gap * 17;
         @include lg-md {
             font-size: 14px;
+        }
+        @include md {
+            text-align: center;
         }
     }
     &__offer-text p {
