--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1060,3 +1060,8 @@ h1 {
     font-size: 20px;
   }
 }
+@media (max-width: 575.8px) {
+  .header-content__offer-btn {
+    min-width: 260px;
+  }
+}
