--- a/assets/scss/_skin.scss
+++ b/assets/scss/_skin.scss
@@ -1,7 +1,9 @@
-$color-primary: #2d3651;
+//$color-primary: #2d3651;
 $color-accent: #FEE040;
-$color-highlight: #d53d27;
-$color-gray: #637588;
-$color-gray-light: #e5e5e5;
-$color-gray-dark: #44596e;
+//$color-highlight: #d53d27;
+//@use ;: #637588;
+$color-gray: #333333;
+$color-gray-light: #707070;
+$color-gray-dark:#151515;
 $color-light:#FFFFFF;
+$color-beg: #F5F5F5;
