--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -11,6 +11,9 @@
 @import "header/header-burger";
 @import "header/header-content";
 @import "header/header-info";
+@import "sections/section-whyme/whyme-list";
+@import "sections/section-whyme/whyme";
+@import "sections/section-whyme/whyme-title";
 @import "sections/section-common";
 @import "sections/section-nav";
 @import "sections/section-main";
