--- a/assets/scss/header/_header-info.scss
+++ b/assets/scss/header/_header-info.scss
@@ -60,6 +60,9 @@
              @include xl-lg {
                  font-size: 18px;
              }
+             @include lg-md {
+                 font-size: 18px;
+             }
              @include md {
                  font-size: 20px;
              }
