--- a/assets/scss/sections/section-whyme/_whyme-list.scss
+++ b/assets/scss/sections/section-whyme/_whyme-list.scss
@@ -11,6 +11,16 @@
         justify-content: center;
         align-items: flex-end;
         margin-right: 22px;
+        @include md {
+            width: 100%;
+            align-items: center;
+            margin-top: 30px;
+            margin-bottom: 50px;
+            padding-top: 40px;
+            padding-bottom: 40px;
+            padding-right: $gap;
+            padding-left: $gap;
+        }
         &__container {
             max-width: 65%;
             h3 {
@@ -24,6 +34,15 @@
                 margin-bottom: 12px;
                 margin-left: -9px;
             }
+            @include lg-md {
+                margin: 0 auto;
+                text-align: center;
+                max-width: 75%;
+            }
+            @include md {
+                max-width: 100%;
+                text-align: center;
+            }
         }
         &__ul {
             list-style: none;
@@ -32,13 +51,18 @@
         &__item {
             &::before {
                 content: "";
-                background: url(/assets/img/icon.png) no-repeat top left; //неправильный путь !!!!
+                background: url(assets/img/icon.png) no-repeat top left; //неправильный путь !!!!
                 height: 30px;
                 width: 30px;
                 position: absolute;
-                left: -50px;
-                bottom: 0;
                 z-index: 1;
+                left: -50px;
+                margin-left: -50px;
+                margin: auto;
+                overflow: auto;
+                @include lg-md {
+                    left: -35px;
+                }
             }
             position: relative;
             font-family: $font-main;
