--- a/assets/scss/sections/section-whyme/_whyme.scss
+++ b/assets/scss/sections/section-whyme/_whyme.scss
@@ -51,7 +51,7 @@
         width: 50%;
         background-color: $color-beg;
     }
-    @include ul {
+    @include md {
         display: none;
     }
 }
