--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -785,6 +785,7 @@ h1 {
   transition: 0.3s linear;
 }
 .header-content__offer-btn:hover {
+  cursor: pointer;
   background-color: #FFFFFF;
   -webkit-transform: scale(1.1);
       -ms-transform: scale(1.1);
@@ -897,9 +898,9 @@ h1 {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  margin-right: 22px;
 }
 .whyme-list__container {
+  margin-right: 22px;
   max-width: 65%;
 }
 .whyme-list__container h3 {
@@ -1016,11 +1017,6 @@ h1 {
   color: #707070;
   opacity: 0.7;
 }
-@media (max-width: 1339.8px) {
-  .whyme-bg {
-    display: none;
-  }
-}
 @media (max-width: 1339.8px) and (min-width: 1200px) {
   .header-menu__left {
     width: 26%;
@@ -1055,7 +1051,7 @@ h1 {
     width: 48%;
   }
   .header-content__main h1 {
-    font-size: 33px;
+    font-size: 38px;
   }
   .header-content__offer {
     width: 35%;
@@ -1077,7 +1073,7 @@ h1 {
   }
   .whyme-title__container h2 {
     text-align: center;
-    font-size: 26px;
+    font-size: 27px;
     margin-bottom: 30px;
   }
   .whyme-title__container p {
@@ -1088,6 +1084,9 @@ h1 {
   }
 }
 @media (max-width: 991.8px) {
+  .whyme-list__container h3 {
+    text-align: center;
+  }
   .whyme img {
     display: none;
   }
@@ -1097,7 +1096,7 @@ h1 {
     width: 40%;
   }
   .header-menu__right {
-    width: 45%;
+    width: 50%;
   }
   .header-content {
     padding-left: 40px;
@@ -1107,7 +1106,7 @@ h1 {
     width: 54%;
   }
   .header-content__main h1 {
-    font-size: 30px;
+    font-size: 35px;
   }
   .header-content__offer {
     width: 40%;
@@ -1145,16 +1144,18 @@ h1 {
   }
   .whyme-list__container {
     margin: 0 auto;
-    text-align: center;
     max-width: 75%;
   }
+  .whyme-list__item {
+    padding-left: 30px;
+  }
   .whyme-list__item::before {
-    left: -35px;
+    left: -30px;
   }
   .whyme-title__container h2 {
     text-align: center;
-    font-size: 25px;
-    margin-bottom: 20px;
+    font-size: 27px;
+    margin-bottom: 35px;
   }
   .whyme-title__container p {
     text-align: center;
@@ -1169,6 +1170,8 @@ h1 {
     width: 100%;
     text-align: center;
     font-size: 42px;
+    padding-right: 20px;
+    padding-left: 20px;
   }
   .header-menu__left {
     width: 100%;
@@ -1275,7 +1278,13 @@ h1 {
   }
   .whyme-list__container {
     max-width: 100%;
-    text-align: center;
+    margin-right: 0;
+  }
+  .whyme-list__item {
+    padding-left: 20px;
+  }
+  .whyme-list__item::before {
+    left: -30px;
   }
   .whyme {
     -webkit-box-orient: vertical;
@@ -1295,16 +1304,19 @@ h1 {
     max-height: 300px;
     height: 100%;
   }
+  .whyme-bg {
+    display: none;
+  }
   .whyme-title {
     width: 100%;
   }
   .whyme-title__container h2 {
     text-align: center;
-    font-size: 35px;
-    margin-top: 80px;
-    margin-bottom: 30px;
-    padding-right: 20px;
-    padding-left: 20px;
+    font-size: 32px;
+    margin-top: 70px;
+    margin-bottom: 33px;
+    padding-right: 32px;
+    padding-left: 32px;
   }
   .whyme-title__container p {
     text-align: center;
@@ -1319,5 +1331,8 @@ h1 {
 @media (max-width: 575.8px) {
   .header-content__offer-btn {
     min-width: 260px;
+  }
+  .whyme-title__container h2 {
+    padding: 0;
   }
 }
