--- a/assets/scss/sections/section-whyme/_whyme-list.scss
+++ b/assets/scss/sections/section-whyme/_whyme-list.scss
@@ -10,7 +10,6 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-end;
-        margin-right: 22px;
         @include md {
             width: 100%;
             align-items: center;
@@ -22,6 +21,7 @@
             padding-left: $gap;
         }
         &__container {
+            margin-right: 22px;
             max-width: 65%;
             h3 {
                 margin-top: 0;
@@ -33,15 +33,17 @@
                 font-weight: 900;
                 margin-bottom: 12px;
                 margin-left: -9px;
+                @include lg {
+                    text-align: center;
+                }
             }
             @include lg-md {
                 margin: 0 auto;
-                text-align: center;
                 max-width: 75%;
             }
             @include md {
                 max-width: 100%;
-                text-align: center;
+                margin-right: 0;
             }
         }
         &__ul {
@@ -49,6 +51,12 @@
             margin: 0;
         }
         &__item {
+            @include lg-md {
+                padding-left: 30px;
+            }
+            @include md {
+                padding-left: 20px;
+            }
             &::before {
                 content: "";
                 background: url(../img/icon.png) no-repeat top left; //неправильный путь !!!!
@@ -61,7 +69,10 @@
                 margin: auto;
                 overflow: auto;
                 @include lg-md {
-                    left: -35px;
+                    left: -30px;
+                }
+                @include md {
+                    left: -30px;
                 }
             }
             position: relative;
