--- a/assets/scss/sections/section-whyme/_whyme-title.scss
+++ b/assets/scss/sections/section-whyme/_whyme-title.scss
@@ -24,21 +24,24 @@
                 }
                 @include xl-lg {
                     text-align: center;
-                    font-size: 26px;
+                    font-size: 27px;
                     margin-bottom: 30px;
                 }
                 @include lg-md {
                     text-align: center;
-                    font-size: 25px;
-                    margin-bottom: 20px;
+                    font-size: 27px;
+                    margin-bottom: 35px;
                 }
                 @include md {
                     text-align: center;
-                    font-size: 35px;
-                    margin-top: 80px;
-                    margin-bottom: 30px;
-                    padding-right: $gap;
-                    padding-left: $gap;
+                    font-size: 32px;
+                    margin-top: 70px;
+                    margin-bottom: 33px;
+                    padding-right: $gap*1.6;
+                    padding-left: $gap*1.6;
+                }
+                @include sm {
+                    padding: 0;
                 }
             }
             p {
